a2a/1.0/modules/ROOT/pages/a2a-connector-studio.adoc
= Using Anypoint Studio to Configure {connector-name} Connector {version}
:exchange-search-name: a2a
:connector-name: A2A
:version: 0.1.0-BETA
:lc-connector-name: a2a
:studio-connector-name: A2A Connector
:tls:

include::connectors::partial$t-studio-partial.adoc[tags=topic-intro]


[[create-mule-project]]
== Create a Mule Project

include::connectors::partial$t-studio-partial.adoc[tags=create-project-intro]

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

include::connectors::partial$t-studio-partial.adoc[tags=add-connector-to-project]

[[configure-source]]
== Configure a Source

include::connectors::partial$t-studio-partial.adoc[tags=configure-source-intro]
You can configure one of these sources to use with {connector-name} Connector:

* *Task Listener*
+
And extension of HTTP Listener. *Task Listener* listens for incoming tasks directed towards its agent, such as messages or API calls.
+
include::connectors::partial$t-studio-partial.adoc[tags=listener-scheduler-descriptions]


include::connectors::partial$t-studio-partial.adoc[tags=listener-steps]

[[add-connector-operation]]
== Add a Connector Operation to the Flow

include::connectors::partial$t-studio-partial.adoc[tags=add-connector-operation]

[[configure-global-element]]
== Configure a Global Element for the Connector

include::connectors::partial$t-studio-partial.adoc[tags=global-element-intro]

include::connectors::partial$t-studio-partial.adoc[tags=property-placeholders]

include::connectors::partial$t-studio-partial.adoc[tags=global-element-first-steps]

. In the *General* tab, in *Connection*, select the authentication method to configure. The MCP protocol's security is mostly based on the OAuth Authorization Code flow. To keep it compatible with different systems and uses, the connector also supports other authentication methods, including:
* <<expression-or-bean-ref>>
* <<basic_authentication>>
* <<digest>>
* <<ntlm>>

ifdef::tls[]
include::connectors::partial$t-studio-partial.adoc[tags=global-element-tls-steps]
endif::[]

[[expression-or-bean-ref]]
=== Expression or Bean Reference

Uses a DataWeave expression or bean reference to define authentication.

[[basic_authentication]]
=== Basic Authentication

Basic authentication is a simple (less secure) authentication scheme where the client sends the username and password in plain text (encoded in Base64) in the HTTP Authorization header.

Enter the Basic authentication information in the *Global Element Properties* screen:

. Select *General > Authentication* and enter or set the values for these fields:
. In *Authentication*, select *Basic authentication* and enter or set the values for these fields:
+
[%header,cols="30s,70a"]
|===
|Field |User Action
|Username | Username used to initialize the session.
|Password | Password used to authenticate the user.
|Preemptive | If set to true, the client sends its authentication credentials (username and password) with the initial HTTP request to the server, rather than waiting for the server to challenge (401 Unauthorized) the client.
|===

[[digest]]
=== Digest

Digest is an HTTP authentication scheme that uses a challenge-response mechanism to avoid sending passwords in plain text. 

Enter the Digest authentication information in the *Global Element Properties* screen:

. Select *General > Authentication* and enter or set the values for these fields:
. In *Authentication*, select *Digest authentication* and enter or set the values for these fields:
+
[%header,cols="30s,70a"]
|===
|Field |User Action
|Username | Username used to initialize the session.
|Password | Password used to authenticate the user.
|Preemptive | If set to true, the client sends its authentication credentials (username and password) with the initial HTTP request to the server, rather than waiting for the server to challenge (401 Unauthorized) the client.
|===

[[ntlm]]
=== NTLM

NTLM authentication is a Microsoft authentication protocol used primarily in Windows environments. It uses a challenge-response mechanism and is commonly used for network authentication.

Enter the NTLM authentication information in the *Global Element Properties* screen:

. Select *General > Authentication* and enter or set the values for these fields:
. In *Authentication*, select *Ntlm authentication* and enter or set the values for these fields:
+
[%header,cols="30s,70a"]
|===
|Field |User Action
|Domain | Name of the proxy domain.
|Workstation | Name of the proxy workstation.
|Username | Username used to initialize the session.
|Password | Password used to authenticate the user.
|Preemptive | If set to true, the client sends its authentication credentials (username and password) with the initial HTTP request to the server, rather than waiting for the server to challenge (401 Unauthorized) the client.
|===


== View the Application Log

include::connectors::partial$t-studio-partial.adoc[tags=view-app-log]


== Next Step

ifdef::additional-config[]
include::connectors::partial$t-studio-partial.adoc[tags=next-step-config-topics]
endif::[]

ifndef::additional-config[]
include::connectors::partial$t-studio-partial.adoc[tags=next-step-examples]
endif::[]


== See Also

include::connectors::partial$t-studio-partial.adoc[tags=see-also]
